--- a/Physical.html
+++ b/Physical.html
@@ -14,9 +14,9 @@
         </div>
         <ul class="main-nav">
             <li><a href="HomePage.html">HOME</a></li>
-            <li class = "active"><a href="AboutUs.html">ABOUT</a></li>
-            <li><a href="ContactUs.html">CONTACT</a></li>
-            <li><a href="New.html">NEWS</a></li>
+            <li class = "active"><a href="AboutUs.html">PHYSICAL</a></li>
+            <li><a href="ContactUs.html">HISTORY</a></li>
+            <li><a href="New.html">CONTACT</a></li>
         </ul>
     </div>
        </header>
